--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <img src="imagenes/pattern-background-desktop.svg" alt="" class="fondo">
     <div class="recuadro">
         <div class="imagen_musica">
             <img src="imagenes/illustration-hero.svg" alt="" class="musica">
